examples/test/testpolicy5701.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5701
  namespace: namespace62
spec:
  podSelector:
    matchLabels:
      key44: value25
      key36: value6
      key21: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value39
          key40: value43
      podSelector:
        matchLabels:
          key45: value32
          key18: value35
